fix(projects): adjust z-index for repo input dropdown

--- a/zoo/base/assets/style/project_form.less
+++ b/zoo/base/assets/style/project_form.less
@@ -24,6 +24,10 @@
   padding: .25rem .3rem;
 }
 
+.ui.search.selection.dropdown {
+  z-index: 1;
+}
+
 .ui.search.selection.dropdown > .search.pushed {
   margin-left: 2rem;
 }
